@@ -122,7 +122,8 @@ void print_help(int mode) {
 "                       to find the XAUTHORITY before anyone has logged into an\n"
 "                       X session yet, use: x11vnc -env FD_XDM=1 -auth guess ...\n"
 "                       (This will also find the XAUTHORITY if a user is already\n"
-"                       logged into the X session.)\n"
+"                       logged into the X session.)  When running as root,\n"
+"                       FD_XDM=1 will be tried if the initial -auth guess fails.\n"
 "\n"
 "-N                     If the X display is :N, try to set the VNC display to\n"
 "                       also be :N This just sets the -rfbport option to 5900+N\n"
@@ -1102,7 +1103,8 @@ void print_help(int mode) {
 "                       to find the XAUTHORITY before anyone has logged into an\n"
 "                       X session yet, use: x11vnc -env FD_XDM=1 -findauth ...\n"
 "                       (This will also find the XAUTHORITY if a user is already\n"
-"                       logged into the X session.)\n"
+"                       logged into the X session.)  When running as root,\n"
+"                       FD_XDM=1 will be tried if the initial -findauth fails.\n"
 "\n"
 "-create                First try to find the user's display using FINDDISPLAY,\n"
 "                       if that doesn't succeed create an X session via the\n"
@@ -1299,6 +1301,12 @@ void print_help(int mode) {
 "                       (same as \"xterm\") to have the created display use\n"
 "                       that mode for the user session.\n"
 "\n"
+"                       Specify \"tag=...\" to set the unique FD_TAG desktop\n"
+"                       session tag described below.  Note: this option will\n"
+"                       be ignored if the FD_TAG env. var. is already set or\n"
+"                       if the viewer-side supplied value is not completely\n"
+"                       composed of alphanumeric or '_' or '-' characters.\n"
+"\n"
 "                       To disable the option setting set the environment\n"
 "                       variable X11VNC_NO_UNIXPW_OPTS=1 before starting x11vnc.\n"
 "                       To set any other options, the user can use the gui\n"
@@ -1386,8 +1394,8 @@ void print_help(int mode) {
 "                       It will start looking for an open display number at :20\n"
 "                       Override via X11VNC_CREATE_STARTING_DISPLAY_NUMBER=n\n"
 "\n"
-"                       By default FINDCREATEDISPLAY will try Xdummy and then\n"
-"                       Xvfb:\n"
+"                       By default FINDCREATEDISPLAY will try Xvfb and then\n"
+"                       Xdummy:\n"
 "\n"
 "                       The Xdummy wrapper is part of the x11vnc source code\n"
 "                       (x11vnc/misc/Xdummy)  It should be available in PATH and\n"
