@@ -47,7 +47,7 @@ int xtrap_base_event_type = 0;
 int xdamage_base_event_type = 0;
 
 /*               date +'lastmod: %Y-%m-%d' */
-char lastmod[] = "0.9.9 lastmod: 2009-12-17";
+char lastmod[] = "0.9.9 lastmod: 2009-12-18";
 
 /* X display info */
 
